--- a/Storyboard.storyboard
+++ b/Storyboard.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Gys-G2-hqU">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,46 +17,63 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="location" translatesAutoresizingMaskIntoConstraints="NO" id="knt-E5-KLE">
-                                <rect key="frame" x="20" y="28" width="20" height="20"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location" translatesAutoresizingMaskIntoConstraints="NO" id="knt-E5-KLE">
+                                <rect key="frame" x="16" y="28" width="20" height="20"/>
                                 <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="E89-Aa-rDQ"/>
+                                    <constraint firstAttribute="height" constant="20" id="WsX-yZ-Y8R"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Ha Noi, Viet Nam" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x1I-e8-E1t">
-                                <rect key="frame" x="68" y="28" width="156" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ha Noi, Viet Nam" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x1I-e8-E1t">
+                                <rect key="frame" x="64" y="28" width="156" height="21"/>
                                 <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="WCP-TG-0aR"/>
+                                    <constraint firstAttribute="width" constant="156" id="phi-6l-lCw"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="O" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qHV-es-AmS">
-                                <rect key="frame" x="206" y="98" width="18" height="21"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sunny" translatesAutoresizingMaskIntoConstraints="NO" id="gf7-Sq-dfA">
+                                <rect key="frame" x="128" y="205" width="64" height="64"/>
                                 <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="sunny" translatesAutoresizingMaskIntoConstraints="NO" id="gf7-Sq-dfA">
-                                <rect key="frame" x="119" y="205" width="64" height="64"/>
-                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="64" id="SZF-Xz-hpi"/>
+                                    <constraint firstAttribute="height" constant="64" id="vbL-wA-2jb"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Sunny" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gMz-pA-m7E">
-                                <rect key="frame" x="127" y="314" width="89" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sunny" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gMz-pA-m7E">
+                                <rect key="frame" x="115" y="314" width="89" height="21"/>
                                 <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="89" id="5Dn-gy-6Wa"/>
+                                    <constraint firstAttribute="height" constant="21" id="Ilw-qr-Pxp"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lww-Vl-c2J">
-                                <rect key="frame" x="137" y="390" width="86" height="32"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lww-Vl-c2J">
+                                <rect key="frame" x="117" y="390" width="86" height="32"/>
                                 <animations/>
-                                <state key="normal" title="Button" image="refresh"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="86" id="PJB-ZU-dAG"/>
+                                    <constraint firstAttribute="height" constant="32" id="vp4-gv-XaE"/>
+                                </constraints>
+                                <state key="normal" image="refresh"/>
                                 <connections>
                                     <action selector="updateWeather:" destination="Gys-G2-hqU" eventType="touchUpInside" id="wkn-X2-mOG"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vGF-t0-YG9">
-                                <rect key="frame" x="79" y="72" width="144" height="138"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vGF-t0-YG9">
+                                <rect key="frame" x="88" y="72" width="144" height="138"/>
                                 <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="138" id="6SC-Zb-2Ao"/>
+                                    <constraint firstAttribute="width" constant="144" id="RTr-44-8aw"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="60"/>
                                 <state key="normal" title="30.5">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -64,9 +82,24 @@
                                     <action selector="updateDegree:" destination="Gys-G2-hqU" eventType="touchUpInside" id="Mik-Um-PSf"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="C" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pu3-0U-BTZ">
-                                <rect key="frame" x="231" y="115" width="19" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="C" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pu3-0U-BTZ">
+                                <rect key="frame" x="232" y="108" width="18" height="25.5"/>
                                 <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25.5" id="QIA-gZ-ZNj"/>
+                                    <constraint firstAttribute="width" constant="18" id="cYp-d8-JXd"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="O" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qHV-es-AmS">
+                                <rect key="frame" x="222" y="91" width="17" height="24.5"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24.5" id="3hH-Fj-ngO"/>
+                                    <constraint firstAttribute="width" constant="17" id="lEc-7P-9eU"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -75,9 +108,27 @@
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="qHV-es-AmS" firstAttribute="leading" secondItem="vGF-t0-YG9" secondAttribute="trailing" constant="-10" id="1Vq-hj-eoB"/>
+                            <constraint firstItem="vGF-t0-YG9" firstAttribute="centerX" secondItem="Djs-m3-Wlw" secondAttribute="centerX" id="2LP-Ih-0FH"/>
+                            <constraint firstItem="x1I-e8-E1t" firstAttribute="top" secondItem="0N7-SW-UHo" secondAttribute="bottom" constant="8" id="2gz-Bm-8Gg"/>
+                            <constraint firstItem="vgt-YA-zke" firstAttribute="top" secondItem="qHV-es-AmS" secondAttribute="bottom" constant="452.5" id="72v-Dh-LEj"/>
+                            <constraint firstItem="gf7-Sq-dfA" firstAttribute="top" secondItem="x1I-e8-E1t" secondAttribute="bottom" constant="156" id="89P-lJ-CbN"/>
+                            <constraint firstItem="knt-E5-KLE" firstAttribute="leading" secondItem="Djs-m3-Wlw" secondAttribute="leadingMargin" id="BuD-lA-B5o"/>
+                            <constraint firstItem="gMz-pA-m7E" firstAttribute="centerX" secondItem="Djs-m3-Wlw" secondAttribute="centerX" id="HuX-EI-peq"/>
+                            <constraint firstItem="gf7-Sq-dfA" firstAttribute="centerX" secondItem="Djs-m3-Wlw" secondAttribute="centerX" id="I0o-Zs-JEb"/>
                             <constraint firstItem="vGF-t0-YG9" firstAttribute="centerX" secondItem="Djs-m3-Wlw" secondAttribute="centerX" id="MwH-Vu-Ccq"/>
+                            <constraint firstItem="pu3-0U-BTZ" firstAttribute="leading" secondItem="vGF-t0-YG9" secondAttribute="trailing" id="Ny4-Y8-qdo"/>
+                            <constraint firstItem="gf7-Sq-dfA" firstAttribute="centerX" secondItem="Djs-m3-Wlw" secondAttribute="centerX" id="QvK-D0-be2"/>
                             <constraint firstItem="gMz-pA-m7E" firstAttribute="centerX" secondItem="Djs-m3-Wlw" secondAttribute="centerX" id="SZ1-5Q-1YH"/>
+                            <constraint firstItem="knt-E5-KLE" firstAttribute="top" secondItem="0N7-SW-UHo" secondAttribute="bottom" constant="8" id="WBw-LY-d0g"/>
+                            <constraint firstItem="x1I-e8-E1t" firstAttribute="leading" secondItem="knt-E5-KLE" secondAttribute="trailing" constant="28" id="aFd-dc-C6y"/>
+                            <constraint firstItem="lww-Vl-c2J" firstAttribute="centerX" secondItem="Djs-m3-Wlw" secondAttribute="centerX" id="beV-3l-arf"/>
                             <constraint firstItem="lww-Vl-c2J" firstAttribute="centerX" secondItem="Djs-m3-Wlw" secondAttribute="centerX" id="f2j-P2-18b"/>
+                            <constraint firstItem="vGF-t0-YG9" firstAttribute="top" secondItem="x1I-e8-E1t" secondAttribute="bottom" constant="23" id="fb2-dP-2V8"/>
+                            <constraint firstItem="pu3-0U-BTZ" firstAttribute="top" secondItem="0N7-SW-UHo" secondAttribute="bottom" constant="88" id="g1H-5b-Cu8"/>
+                            <constraint firstItem="gMz-pA-m7E" firstAttribute="top" secondItem="gf7-Sq-dfA" secondAttribute="bottom" constant="45" id="goi-HR-k9D"/>
+                            <constraint firstItem="lww-Vl-c2J" firstAttribute="top" secondItem="gMz-pA-m7E" secondAttribute="bottom" constant="55" id="lBX-OA-5cb"/>
+                            <constraint firstItem="qHV-es-AmS" firstAttribute="bottom" secondItem="vGF-t0-YG9" secondAttribute="top" constant="43.5" id="ncY-y9-hgS"/>
                             <constraint firstItem="gf7-Sq-dfA" firstAttribute="centerX" secondItem="Djs-m3-Wlw" secondAttribute="centerX" id="v6h-5D-XWQ"/>
                         </constraints>
                         <variation key="default">
@@ -86,6 +137,7 @@
                                 <exclude reference="v6h-5D-XWQ"/>
                                 <exclude reference="SZ1-5Q-1YH"/>
                                 <exclude reference="f2j-P2-18b"/>
+                                <exclude reference="72v-Dh-LEj"/>
                             </mask>
                         </variation>
                     </view>
@@ -100,7 +152,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Fh-Rq-abX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="201" y="299"/>
+            <point key="canvasLocation" x="331" y="280"/>
         </scene>
     </scenes>
     <resources>
